fixed horizontal scroll

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -11,6 +11,6 @@
 
 @media screen and (max-width: 1024px) {
   .content {
-    width: 100vw;
+    width: 100%;
   }
 }
